2008-05-09  John Stowers  <john.stowers@gmail.com>

	* evolution/ebook.defs: Wrap more addressbook functions, is_opened, 
	is_writable, is_online, open, new_{default,system}_addressbook, get_uri,
	set_default_addressbook.

	* evolution/evo-contact.c (evo_contact_get_name): Stop warning when
	contact doesnt have a name set.

2008-05-09  John Stowers  <john.stowers@gmail.com>

	* evolution/ebook.defs:
	* evolution/ecal.defs:
	* evolution/evo-addressbook.c (evo_addressbook_get_uid):
	* evolution/evo-addressbook.h:
	* evolution/evo-calendar.c (evo_cal_source_get_uid):
	* evolution/evo-calendar.h:
	* examples/evolution/evo-test.py: Wrap e_source_peek_uid() as
	ebook.get_uid() and ecalsource.get_uid(). Fixes #519258

2008-05-04  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* docs/gnomeprint/wscript:
	* docs/gnomeprintui/wscript:
	* docs/gtksourceview/wscript:
	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	* wscript: Fixes for the upcoming WAF 1.4.1 (but still also works with WAF 1.3.2).

2008-05-04  Marcin Banasiak  <megabajt@pld-linux.org>

	reviewed by: Gustavo Carneiro

	* gnomekeyring/gnomekeyring.override: Bug 531254 –
	gnomekeyring.get_default_keyring_sync() always returns None.

2008-04-12  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* wscript, configure.ac: Bump version to 2.23.0.

=== 2.22.0 ===
2008-03-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* wscript, configure.ac: Bump version.

=== 2.21.3 ===
2008-02-23  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* wscript (build): Fix typo in passing includedir into the .pc file.

	* NEWS: Update.

	* configure.ac: Add autotools deprecation warning and WAF build
	instructions.

2008-02-18  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* evolution/evo-calendar.c (evo_cal_source_open_source)