@@ -1,5 +1,16 @@
 EXTRA_DIST = common.xsl html.xsl ref-html-style.xsl tut-html-style.xsl \
 	     pdf-style.xsl pdf.xsl devhelp.xsl pygtk-ref-docs.make
 
-SUBDIRS = gtksourceview gnomeprint gnomeprintui
+SUBDIRS=
 
+if BUILD_GTKSOURCEVIEW
+  SUBDIRS += gtksourceview
+endif
+
+if BUILD_GNOMEPRINT
+  SUBDIRS += gnomeprint
+endif
+
+if BUILD_GNOMEPRINTUI
+  SUBDIRS += gnomeprintui
+endif
